Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-121449

The emojis are pixelated

XMLWordPrintable

    • Windows
    • 23ae81c84 (dev), 4a85b870e (6.8), 4da6490b6 (6.7), 32051ae45 (tqtc/lts-6.5)

      Emojis are pixelated when moving the main display and using a frameless window.

      Please find attached a sample project "emojis-pixelated-project.zip" to reproduce the bug.

      Please find attached the executable "emojis-pixelated-executable.zip" built from the sample project.

      Note that I have tried by setting a frameless window using Qt and Windows APIs (both give the same result)

      Requirements:

      Two monitors configured as follows:

      Multiple display settings: Extend these displays

      1. Display I

          1. To the left of Display 2

          2. Resolution: 1920 x 1080

          3. Scale: 100%

          4. Display orientation: Landscape

      2. Display II

          1. To the right of Display 1

          2. Resolution: 3840 x 2160

          3. Scale: 300%

          4. Display orientation: Landscape

          5. Main display

      Reproduction Steps:

      1. Unzip the sample project.
      2. Open the location where the application was unzipped and move the explorer window to Display I (the non-main display).
      3. Open `emojis-pixelated.exe`
      4. The window will first appear on Display I and then, after a few seconds, automatically move to the main display (Display II).
      5. Notice that the emojis are pixelated.

      Good to Know:

      To make a comparison with the expected behavior, you can move the window to Display II (the main display) and open emojis-pixelated.exe from there. Since the window will not move from one display to another, the emojis will be sharp.

        1. actual.png
          actual.png
          46 kB
        2. emojis-pixelated-executable.zip
          28.51 MB
        3. emojis-pixelated-project.zip
          3 kB
        4. expected.png
          expected.png
          64 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            snovelgo Saul Novel Gonzalez
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes