src/quick/items/qquicktextinput.cpp
@@ -1814,7 +1814,7 @@ void QQuickTextInput::itemChange(ItemChange change, const ItemChangeData &value)
     Q_UNUSED(value);
     switch (change) {
     case ItemDevicePixelRatioHasChanged:
-        if (d->renderType == NativeRendering) {
+        if (d->containsUnscalableGlyphs) {
             // Native rendering optimizes for a given pixel grid, so its results must not be scaled.
             // Text layout code respects the current device pixel ratio automatically, we only need
             // to rerun layout after the ratio changed.
@@ -2040,6 +2040,8 @@ QSGNode *QQuickTextInput::updatePaintNode(QSGNode *oldNode, UpdatePaintNodeData 
 
         d->textLayoutDirty = false;
     }
+
+    d->containsUnscalableGlyphs = node->containsUnscalableGlyphs();
 
     invalidateFontCaches();
 
